# fastapi-production-template

./: .coverage  .gitignore  doc.md  docker-compose.yml  env.template  pyproject.toml
.cursor/rules/: tdd.mdc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 53445a221ad4_initial_migration_create_users_table.py
app/: main.py
app/api/: __init__.py  deps.py  exceptions.py  health.py
app/api/v1/: auth.py
app/core/: config.py  database.py  middleware.py  security.py
app/models/: __init__.py  base.py  user.py
app/schemas/: token.py  user.py
scripts/: seed_data.py
tests/: conftest.py  health_test.py  test_auth.py  test_authentication.py  test_config.py  test_user_registration.py
tests/auth/: test_auth_integration.py  test_authentication.py  test_user_registration.py
